--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-preview-card",
+  "name": "skilled-elearning-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,6 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/plus-jakarta-sans": "^5.2.5",
     "@mui/material": "^7.1.0",
-    "blog-preview-card": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
