--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fontsource/plus-jakarta-sans": "^5.2.5",
     "@mui/material": "^7.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "skilled-elearning-landing-page": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
